<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CaseInfoFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/DNNValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="120dp"
            android:text="@string/dreams_and_nightmares"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/KValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/kilowatt"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/DNNValue"
            app:layout_constraintTop_toBottomOf="@+id/DNNValue" />

        <TextView
            android:id="@+id/EsportsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/esports"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/KValue"
            app:layout_constraintTop_toBottomOf="@+id/KValue" />

        <TextView
            android:id="@+id/KeyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cost_per_key_2_50"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/EsportsValue"
            app:layout_constraintTop_toBottomOf="@+id/EsportsValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>