<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EarningsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/NetWorthLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="120dp"
            android:text="@string/net_worth"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/NetWorthAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/NetWorthLabel"
            app:layout_constraintTop_toTopOf="@+id/NetWorthLabel" />

        <TextView
            android:id="@+id/CaseValueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/value_of_cases_opened"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/NetWorthAmt"
            app:layout_constraintTop_toBottomOf="@+id/NetWorthLabel" />

        <TextView
            android:id="@+id/CaseValueAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/CaseValueLabel"
            app:layout_constraintTop_toTopOf="@+id/CaseValueLabel" />

        <TextView
            android:id="@+id/NetProfitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/net_profit"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/CaseValueAmt"
            app:layout_constraintTop_toBottomOf="@+id/CaseValueLabel" />

        <TextView
            android:id="@+id/NetProfitAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/NetProfitLabel"
            app:layout_constraintTop_toTopOf="@+id/NetProfitLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>